--- a/fonts/takao-fonts-ttf/Makefile
+++ b/fonts/takao-fonts-ttf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2015/03/07 11:11:05 ryoon Exp $
+# $NetBSD: Makefile,v 1.7 2015/03/07 12:09:25 ryoon Exp $
 #
 
 DISTNAME=	TakaoFonts_00303.01
@@ -9,7 +9,7 @@ EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	ryoon@NetBSD.org
 HOMEPAGE=	https://launchpad.net/takao-fonts
-COMMENT=	Takao fonts are based on IPA(ex) fonts, and includes some bug fix
+COMMENT=	Takao fonts are based on IPA fonts, and includes some bug fix
 LICENSE=	ipafont
 
 USE_X11BASE=	YES
