--- a/devel/redmine/Makefile
+++ b/devel/redmine/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2015/03/01 13:42:02 taca Exp $
+# $NetBSD: Makefile,v 1.4 2015/03/08 15:49:35 taca Exp $
 
 DISTNAME=	redmine-2.6.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
@@ -186,20 +186,8 @@ BUILD_DEFS+=	APACHE_GROUP APACHE_USER
 FILES_SUBST+=	WWWGRP=${APACHE_GROUP} WWWOWN=${APACHE_USER} \
 		RM_DIR=${RM_DIR}
 
-# XXX The following is borrowed from lang/ruby/gem.mk.
-# XXX Please integrate the following to lang/ruby/*.mk.
-do-extract:
-# Extract non-gem tarball
-	${RUN} extract_file=${_DISTDIR:Q}/${DISTFILES:M*${EXTRACT_SUFX}:Q}; export extract_file;  \
-		cd ${WRKDIR} && cd ${EXTRACT_DIR.${DISTFILES:M*${EXTRACT_SUFX}:Q}} && ${EXTRACT_CMD}
-# Extract gems
-.for _gem_ in ${DISTFILES:M*.gem}
-	${RUN} cd ${WRKDIR} && ${SETENV} ${MAKE_ENV} ${RUBYGEM_ENV} \
-		${RUBYGEM_NAME} unpack ${_DISTDIR:Q}/${_gem_:Q}
-	${RUN} cd ${WRKDIR} && \
-		${SETENV} ${MAKE_ENV} TZ=UTC ${RUBYGEM_ENV} \
-		${RUBYGEM_NAME} spec --ruby ${_DISTDIR:Q}/${_gem_:Q} > ${_gem_}spec
-.endfor
+GEM_EXTSDIR_NEEDS_SUBDIR=	no
+.include "../../lang/ruby/gem-extract.mk"
 
 do-build:
 .for _gem_ in ${DISTFILES:M*.gem:S/.gem$//g}
@@ -218,18 +206,6 @@ _RUBYGEM_OPTIONS+=	--ignore-dependencies
 _RUBYGEM_OPTIONS+=	--no-ri --no-rdoc
 
 .include "../../lang/ruby/rubyversion.mk"
-.if !empty(RUBY_GEMS_VERSION)
-_RUBYGEMS_MAJOR=	${RUBY_GEMS_VERSION:C/\.[0-9\.]+$//}
-_RUBYGEMS_MINORS=	${RUBY_GEMS_VERSION:C/^([0-9]+)\.*//}
-.  if ${_RUBYGEMS_MAJOR} >= 2 && ${_RUBYGEMS_MINORS} >= 2
-GEM_EXTSDIR=	${GEM_HOME}/extensions/${RUBY_ARCH}/${RUBY_VERSION}
-.  endif
-.  if !empty(GEM_EXTSDIR)
-PLIST_SUBST+=		GEM_EXTSDIR=${GEM_EXTSDIR}
-.  else
-PLIST_SUBST+=		GEM_EXTSDIR="@comment "
-.  endif
-.endif
 
 do-install:
 # Install gems
