--- a/www/thin/Makefile
+++ b/www/thin/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2015/03/01 15:41:36 taca Exp $
+# $NetBSD: Makefile,v 1.17 2015/03/08 16:10:37 taca Exp $
 
 DISTNAME=	thin-1.6.3
+PKGREVISION=	1
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -8,7 +9,7 @@ HOMEPAGE=	http://code.macournoyer.com/thin/
 COMMENT=	Fast and very simple Ruby web server
 LICENSE=	mit
 
-DEPENDS+=	${RUBY_PKGPREFIX}-rack>=1.0.0:../../www/ruby-rack
+DEPENDS+=	${RUBY_PKGPREFIX}-rack15>=1.0.0:../../www/ruby-rack15
 DEPENDS+=	${RUBY_PKGPREFIX}-daemons>=1.0.9:../../misc/ruby-daemons
 DEPENDS+=	${RUBY_PKGPREFIX}-eventmachine>=1.0.0:../../devel/ruby-eventmachine
 
