--- a/misc/calibre/Makefile
+++ b/misc/calibre/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.92 2015/02/27 09:47:47 wiz Exp $
+# $NetBSD: Makefile,v 1.93 2015/03/09 09:02:20 wiz Exp $
 
 DISTNAME=	calibre-2.20.0
+PKGREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=calibre/}
 EXTRACT_SUFX=	.tar.xz
