--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.629 2015/02/21 19:45:34 jmcneill Exp $
+# $NetBSD: Makefile,v 1.630 2015/03/10 09:07:55 manu Exp $
 #
 
 COMMENT=	System utilities
@@ -278,6 +278,7 @@ SUBDIR+=	krusader
 SUBDIR+=	ksystemlog
 SUBDIR+=	kuser
 SUBDIR+=	lambd
+SUBDIR+=	lastfss
 SUBDIR+=	lavaps
 SUBDIR+=	libburn
 SUBDIR+=	libdevkit-gobject
