--- a/textproc/go-text/Makefile
+++ b/textproc/go-text/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.1 2015/03/10 19:57:18 bsiegert Exp $
+# $NetBSD: Makefile,v 1.2 2015/03/10 20:29:06 bsiegert Exp $
 #
 
 DISTNAME=		text
-PKGNAME=		go-text-20150310
-CATEGORIES=		devel
+PKGNAME=		go-${DISTNAME}-20150310
+GITHUB_PROJECT=		text
+CATEGORIES=		textproc
 MASTER_SITES=		${MASTER_SITE_GITHUB:=golang/}
 GITHUB_TAG=		d1927f6997
 
