--- a/pkgtools/pkglint/Makefile
+++ b/pkgtools/pkglint/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.458 2015/03/09 06:24:09 wiz Exp $
+# $NetBSD: Makefile,v 1.459 2015/03/11 19:05:58 rillig Exp $
 
 # Note: if you update the version number, please have a look at the
 # changes between the CVS tag "pkglint_current" and HEAD.
 # After updating, please re-set the CVS tag to HEAD.
-PKGNAME=	pkglint-4.152
+PKGNAME=	pkglint-4.153
 CATEGORIES=	pkgtools
 
 OWNER=		wiz@NetBSD.org
