--- a/lang/gcc48-libs/Makefile
+++ b/lang/gcc48-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2014/11/28 09:59:31 obache Exp $
+# $NetBSD: Makefile,v 1.18 2015/03/12 14:56:14 ryoon Exp $
 
 GCC_PKGNAME=	gcc48
 .include	"../../lang/${GCC_PKGNAME}/version.mk"
@@ -8,7 +8,7 @@ PKGNAME=	${GCC_PKGNAME}-libs-${GCC48_DIST_VERSION}
 ## The PKGREVISION of this package needs to be at least 1 more than the
 ## PKGREVISION of the lang/gcc48 package so that with the dependence pattern
 ## '{gcc48,gcc48-libs}>=4.8.*' pkg_all will choose gcc48-libs over gcc48.
-PKGREVISION=	3
+PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	# empty
 DISTFILES=	# empty
