--- a/lang/gcc48-libs/Makefile
+++ b/lang/gcc48-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2015/03/12 14:56:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.19 2015/03/12 15:01:21 jperkin Exp $
 
 GCC_PKGNAME=	gcc48
 .include	"../../lang/${GCC_PKGNAME}/version.mk"
@@ -52,7 +52,7 @@ GENERATE_PLIST+= ${GREP} -q 'lib/' ${LIBRARY_FILES} || \
 ${LIBRARY_FILES}:
 	${PKG_INFO} -qL '${GCC_PKGNAME}-${GCC48_DIST_VERSION}*' |	\
 	${SED} -n -e's,^${LIBGCC_PREFIX}/,,' -e'/libexec\//d'		\
-		-e'/libgij/d;/libgcj/d;/libjvm/d'			\
+		-e'/libgcj/d;/libgij/d;/libgo\./d;/libjvm/d'		\
 		-e'/lib.*\.${SHLIB_EXT}/p' 		>${LIBRARY_FILES}
 
 do-install: ${LIBRARY_FILES}
