--- a/net/go-net/Makefile
+++ b/net/go-net/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.1 2015/03/10 21:28:45 bsiegert Exp $
+# $NetBSD: Makefile,v 1.2 2015/03/12 20:55:48 tnn Exp $
 #
 
-DISTNAME=		net
-PKGNAME=		go-${DISTNAME}-20150310
-GITHUB_PROJECT=		${DISTNAME}
+DISTNAME=		go-net-20150310
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_GITHUB:=golang/}
+GITHUB_PROJECT=		net
 GITHUB_TAG=		6dc0abcce2
 
 MAINTAINER=		bsiegert@NetBSD.org
@@ -14,7 +13,7 @@ COMMENT=		Supplementary network libraries for Go
 LICENSE=		modified-bsd
 
 GO_SRCPATH=		golang.org/x/net
-GO_DIST_BASE=		${DISTNAME}-${GITHUB_TAG}*
+GO_DIST_BASE=		${GITHUB_PROJECT}-${GITHUB_TAG}*
 
 .include "../../textproc/go-text/buildlink3.mk"
 .include "../../lang/go/go-package.mk"
