--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2066 2015/03/10 16:12:37 taca Exp $
+# $NetBSD: Makefile,v 1.2067 2015/03/13 13:38:55 taca Exp $
 #
 
 COMMENT=	Development utilities
@@ -1730,6 +1730,7 @@ SUBDIR+=	ruby-backports
 SUBDIR+=	ruby-blankslate
 SUBDIR+=	ruby-bsearch
 SUBDIR+=	ruby-byaccr
+SUBDIR+=	ruby-celluloid
 SUBDIR+=	ruby-cmd
 SUBDIR+=	ruby-curses
 SUBDIR+=	ruby-curses-gem
