--- a/devel/ruby-simplecov-html/Makefile
+++ b/devel/ruby-simplecov-html/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2015/03/13 13:57:21 taca Exp $
+# $NetBSD: Makefile,v 1.6 2015/03/13 14:00:10 taca Exp $
 
 DISTNAME=	simplecov-html-0.9.0
 CATEGORIES=	devel
@@ -6,7 +6,7 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/colszowka/simplecov-html
 COMMENT=	Default HTML formatter for SimpleCov code coverage tool
-LICENSE=	gnu-gpl-v2 OR ruby-license
+LICENSE=	mit
 
 RUBY_VERSION_SUPPORTED=	21 200 193
 
