--- a/devel/ruby-simplecov/Makefile
+++ b/devel/ruby-simplecov/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2015/03/13 13:58:13 taca Exp $
+# $NetBSD: Makefile,v 1.11 2015/03/13 14:00:26 taca Exp $
 
 DISTNAME=	simplecov-0.9.2
 CATEGORIES=	devel
@@ -6,7 +6,7 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://github.com/colszowka/simplecov
 COMMENT=	Code coverage for Ruby 1.9
-LICENSE=	gnu-gpl-v2 OR ruby-license
+LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-multi_json>=1.0<2:../../textproc/ruby-multi_json
 DEPENDS+=	${RUBY_PKGPREFIX}-simplecov-html>=0.9.0<0.10:../../devel/ruby-simplecov-html
