--- a/time/p5-DateTime/Makefile
+++ b/time/p5-DateTime/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.66 2017/06/05 14:25:02 ryoon Exp $
+# $NetBSD: Makefile,v 1.67 2017/06/14 13:15:48 wiz Exp $
 
-DISTNAME=	DateTime-1.42
+DISTNAME=	DateTime-1.43
 PKGNAME=	p5-${DISTNAME}00
-PKGREVISION=	1
 CATEGORIES=	time perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DateTime/}
 
